# RaspML

./: .gitignore  README.md  git_files.txt  removeGits.py  todo
Beyza/: atilanProjeler.txt  fiyatlandirma.txt  kurulum.sh  not  requirements.txt
Beyza/ubuntuProjects/: COVID_Mask_Pre_NII.ipynb  not
Beyza/ubuntuProjects/Mask_RCNN/: local_reqs.txt  requirements2.txt  yapilanlar.txt
Beyza/ubuntuProjects/Mask_RCNN/samples/: demo.ipynb  demo.py
Beyza/ubuntuProjects/torch_/: covid_det.ipynb
GizemOZDEN/: calismayanlarin_durumlari.txt  gdal_installation.txt  install_gdal.sh  output.txt  projeler_hakkinda.txt  projelerin_durumu.txt  projelerin_durumu2.txt  projelerin_durumu3.txt
GizemOZDEN/Gizem/: not
GizemOZDEN/Kubra/UBUNTU/calismayanlar/py-yield-estimation/: .pre-commit-config.yaml  Dockerfile  README.md  asd.txt  asdasd.txt  local_req.txt  not  package-lock.json  package.json  pyproject.toml  rio_tiler  serverless.yml
GizemOZDEN/Kubra/UBUNTU/calismayanlar/py-yield-estimation/docs/: conf.py  index.rst
GizemOZDEN/Kubra/UBUNTU/calismayanlar/py-yield-estimation/scripts/: build.sh  geojson.json  run_yield_estimation.py
GizemOZDEN/Kubra/UBUNTU/calismayanlar/py-yield-estimation/scripts/src/: __init__.py  _version.py  api.py  cli.py  handler.py  log_cfg.py  main.py
GizemOZDEN/Kubra/UBUNTU/calismayanlar/py-yield-estimation/tests/: sample.json
GizemOZDEN/RASPS/NDVI/NDVI/: NDVI.py  not  (+2 more)
GizemOZDEN/RASPS/RASP_PROJS/: not
GizemOZDEN/RASPS/Raspberry-pi-NDVI/: ubuntu_ndvi.py
GizemOZDEN/RASPS/UBUNTU_PROJS/: not  projeler_hakkinda.txt
GizemOZDEN/asd/: NDVI_TEST.py
(+1073 files in other folders)
